components/gridItem/gridItem.module.css
.container {
    display: flex;
    flex-direction: column;
}

.imgWrapper {
    position: relative;
    padding: 1rem 0;
}

.img {
    width: 80%;
}

.hide {
    display: none;
}


.show {
    display: flex;
    z-index: 100;
    width: 100%;
    background-color: var(--secondary-bg-color);
}

.wrapper {
    display: flex;
    justify-content: space-between;
}

.title {
    font-size: 1rem;
    font-weight: 400;
    font-family: var(--secondary-font);
}

.description {
    position: absolute;
    padding: 0.5rem;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    color: var(--secondary-bg-color);
    font-family: var(--secondary-font);
    font-size: 0.8rem;
}

